updated viewport, alt, after review

--- a/product_portfolio.html
+++ b/product_portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-<meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <title>Ty Clauss - Portfolio Site</title>
@@ -13,13 +13,13 @@
 
 	<div class="icon-space-right"> 
 
-		<h1 class="sub-title">thanks for stopping by!	<span><a href="https://reporter.rit.edu/users/txc9911"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/reporter_logo.jpg"></a></span>
+		<h1 class="sub-title">thanks for stopping by!	<span><a href="https://reporter.rit.edu/users/txc9911"><img alt="Reporter Magazine logo" class="linked_logos hoverImages" src="product_portfolio/images/reporter_logo.jpg"></a></span>
 
-		<span><a href="https://twitter.com/ty_clauss"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/twitter_logo.png"></a></span>
+		<span><a href="https://twitter.com/ty_clauss"><img alt="Twitter logo" class="linked_logos hoverImages" src="product_portfolio/images/twitter_logo.png"></a></span>
 
-		<span><a href="https://www.quora.com/profile/Ty-Clauss"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/quora_logo.png"></a></span> 
+		<span><a href="https://www.quora.com/profile/Ty-Clauss"><img alt="Quora logo" class="linked_logos hoverImages" src="product_portfolio/images/quora_logo.png"></a></span> 
 
-		<span><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BMy9pZ%2FR5RKyFwdy8jfBMUg%3D%3D"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/LinkedIn_logo.png"></a></span></h1>
+		<span><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BMy9pZ%2FR5RKyFwdy8jfBMUg%3D%3D"><img alt="LinkedIn logo" class="linked_logos hoverImages" src="product_portfolio/images/LinkedIn_logo.png"></a></span></h1>
 
 
 	</div>
@@ -27,20 +27,20 @@
 	<hr class="header">
 	<div class="icon-space-left">
 		
-		<span><a href="https://reporter.rit.edu/users/txc9911"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/reporter_logo.jpg"></a></span>
+		<span><a href="https://reporter.rit.edu/users/txc9911"><img alt="Reporter Magazine logo" class="linked_logos hoverImages" src="product_portfolio/images/reporter_logo.jpg"></a></span>
 
-		<span><a href="https://twitter.com/ty_clauss"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/twitter_logo.png"></a></span>
+		<span><a href="https://twitter.com/ty_clauss"><img alt="Twitter logo" class="linked_logos hoverImages" src="product_portfolio/images/twitter_logo.png"></a></span>
 
-		<span><a href="https://www.quora.com/profile/Ty-Clauss"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/quora_logo.png"></a></span> 
+		<span><a href="https://www.quora.com/profile/Ty-Clauss"><img alt="Quora logo" class="linked_logos hoverImages" src="product_portfolio/images/quora_logo.png"></a></span> 
 
-		<span><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BMy9pZ%2FR5RKyFwdy8jfBMUg%3D%3D"><img alt="" class="linked_logos hoverImages" src="product_portfolio/images/LinkedIn_logo.png"></a></span>
+		<span><a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact_info%3BMy9pZ%2FR5RKyFwdy8jfBMUg%3D%3D"><img alt="LinkedIn logo" class="linked_logos hoverImages" src="product_portfolio/images/LinkedIn_logo.png"></a></span>
 	</div>
 	</header>
 
 
 	
 
-	<div id="about-me">
+	<div class="about-me">
 		<p class="category-title">about me</p>
 		<hr class="about">
 		
@@ -52,7 +52,7 @@
 
 	</div>
 
-	<div id="portfolio">
+	<div class="portfolio">
 		<p class="category-title">portflio</p>
 		<hr class="port">
 
@@ -60,26 +60,25 @@
 			
 			<div class="project-item" id="#item1">
 				<h1 class="project-title">vantage</h1>
-				<img alt="" onclick="window.open('https://vantagenews.net')" class="project-pic-frame" src="product_portfolio/images/1000px-fav@2x.png">
+				<img alt="Vantage logo" onclick="window.open('https://vantagenews.net')" class="project-pic-frame" src="product_portfolio/images/1000px-fav@2x.png">
 				<p class="sub-text-project">creating a news app with three other students</p>
 			</div>
 			
 			<div class="project-item" id="item2">
 				<h1 class="project-title">SQL logs analysis</h1>
-				<img alt="" class="project-pic-frame" src="product_portfolio/images/logs_photo.jpg">
+				<img alt="Picure of a logorithmic graph" class="project-pic-frame" src="product_portfolio/images/logs_photo.jpg">
 				<p class="sub-text-project">(coming soon)</p>
 			</div>
 
 			
 			<div class="project-item" id="item3">
 				<h1 class="project-title">item catalog</h1>
-				<!--<img alt="img placeholder" class="project-pic-frame" src="">-->
 				<p class="sub-text-project">(coming soon)</p>
 			</div>
 
 			<div class="project-item" id="#item4">
 				<h1 class="project-title">favorite movies</h1>
-				<img alt="" class="project-pic-frame" id="movie-pic" src="product_portfolio/images/movietrailer.png">
+				<img alt="Screen shot of a movie trailer website" class="project-pic-frame" id="movie-pic" src="product_portfolio/images/movietrailer.png">
 				<p class="sub-text-project">my favorite movies, credit to "Fresh Tomatoes"</p>
 			</div>
 
