--- a/home.html
+++ b/home.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109584677-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109584677-1');
+</script>
+
+
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
