adding github links to projects

--- a/home.html
+++ b/home.html
@@ -75,19 +75,19 @@
 			
 			<div class="project-item" id="item2">
 				<h1 class="project-title">SQL logs analysis</h1>
-				<img alt="Picure of a logorithmic graph" class="project-pic-frame" src="product_portfolio/images/logs_photo.jpg">
-				<p class="sub-text-project">(coming soon)</p>
+				<img alt="Picure of a logorithmic graph" class="project-pic-frame" src="product_portfolio/images/logs_photo.jpg" onclick="window.open('https://github.com/tyclauss/SQL_log_analysis')" >
+				<p class="sub-text-project">A Python script that connects to a PostreSQL database via psycop2</p>
 			</div>
 
 			
 			<div class="project-item" id="item3">
-				<h1 class="project-title">item catalog</h1>
+				<h1 class="project-title">Python/Flask item catalog</h1>
 				<p class="sub-text-project">(coming soon)</p>
 			</div>
 
 			<div class="project-item" id="#item4">
 				<h1 class="project-title">favorite movies</h1>
-				<img alt="Screen shot of a movie trailer website" class="project-pic-frame" id="movie-pic" src="product_portfolio/images/movietrailer.png">
+				<img alt="Screen shot of a movie trailer website" onclick="window.open('https://github.com/tyclauss/movie_website')" class="project-pic-frame" id="movie-pic" src="product_portfolio/images/movietrailer.png">
 				<p class="sub-text-project">my favorite movies, credit to "Fresh Tomatoes"</p>
 			</div>
 
